<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手机卫士</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_version">版本号</string>
    <string name="test">文字测试</string>
    <string name="phoneGuard">手机卫士</string>
    <string name="blacklist">手机黑名单管理</string>
    <string name="phoneProtectd">手机防盗</string>
    <string name="setpwd">设置密码</string>
    <string name="firsteEntryTip">请设置手机密码</string>
    <string name="confrimpwd">确认密码</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="inputpwd">输入密码</string>
    <string name="inputPhonePwd">请输入手机密码</string>
    <string name="previous">上一步</string>
    <string name="next">下一步</string>
    <string name="bt_bind">绑定</string>
    <string name="cb_unband">没有绑定</string>
    <string name="select_contact">选择联系人</string>
    <string name="unopenprotect">没有开启保护</string>
    <string name="setup1">设置向导1/4</string>
    <string name="setup2">设置向导2/4</string>
    <string name="setup3">设置向导3/4</string>
    <string name="setup4">设置向导4/4</string>
    <string name="setupfinish">设置完成</string>
    <string name="atool">高级工具</string>
    <string name="query_attribue">归属地查询</string>
	<string name="add">添加</string>
	<string name="app_manager">应用程序管理</string>
	<string name="app_lock">程序锁</string>
	<string name="setting_center">设置中心</string>
	<string name="tasksetting">任务设置</string>
	<string name="commonnum">常用号码查询</string>
	<string name="traffic_managert">流量管理</string>
	<string name="systemopti">系统优化</string>
	<string name="anti_virtus">手机杀毒</string>
</resources>