<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/setpwd"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:background="#ffc8c8c8"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/firsteEntryTip"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/et_first_entry_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/confrimpwd"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/et_first_entry__confrim_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:gravity="center"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_first_entry_confirm"
            android:layout_width="145dip"
            android:layout_height="40dip"
            android:layout_marginRight="5dip"
            android:background="#ff0FD523"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/bt_first_entry_cancel"
            android:layout_width="145dip"
            android:layout_height="40dip"
            android:background="#ffB0B0B0"
            android:layout_marginLeft="5dip"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>