<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudcolor"
    android:orientation="vertical" >

    <TextView
        style="@style/guide_title_text"
        android:text="2、手机卡绑定" />

    <ImageView style="@style/guide_devide_line" />

    <TextView
        style="@style/guide_content_text"
        android:text="每次开机启动，如果发现sim卡改变，会自动发送报警短信" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_bind"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/bt_bind" />

        <CheckBox
            android:id="@+id/cb_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_unband" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView style="@style/guide_image_status_off" />

        <ImageView style="@style/guide_image_status_on" />

        <ImageView style="@style/guide_image_status_off" />

        <ImageView style="@style/guide_image_status_off" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dip"
        android:gravity="center_vertical|center_horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bind" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/next"
            android:text="@string/next" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/previous"
            android:text="@string/previous" />
    </RelativeLayout>

</LinearLayout>