<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudcolor"
    android:orientation="vertical" >

    <TextView
        style="@style/guide_title_text"
        android:text="4、恭喜你，设置完成" />

    <ImageView style="@style/guide_devide_line" />

    <TextView
        style="@style/guide_content_text"
        android:text="强烈建议你开启保护" />

    <CheckBox
        android:id="@+id/cb_open_protect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/unopenprotect" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView style="@style/guide_image_status_off" />

        <ImageView style="@style/guide_image_status_off" />

        <ImageView style="@style/guide_image_status_off" />

        <ImageView style="@style/guide_image_status_on" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dip"
        android:gravity="center_vertical|center_horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/luyang" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_setup_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/next"
            android:text="@string/setupfinish" />

        <Button
            android:id="@+id/bt_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/previous"
            android:text="@string/previous" />
    </RelativeLayout>

</LinearLayout>