<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudcolor"
    android:orientation="vertical" >

    <TextView
        style="@style/guide_title_text"
        android:text="3、设置安全号码" />

    <ImageView style="@style/guide_devide_line" />

    <TextView
        style="@style/guide_content_text"
        android:text="sim卡变更后，可以把报警发送到该安全号码上" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="请输入或选择安全手机号码" />

        <Button
            android:id="@+id/bt_selectContact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_contact" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView style="@style/guide_image_status_off" />

        <ImageView style="@style/guide_image_status_off" />

        <ImageView style="@style/guide_image_status_on" />

        <ImageView style="@style/guide_image_status_off" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dip"
        android:gravity="center_vertical|center_horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/next"
            android:text="@string/next" />

        <Button
            android:id="@+id/bt_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/previous"
            android:text="@string/previous" />
    </RelativeLayout>

</LinearLayout>